--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -71,5 +71,469 @@
         </p>
       </div>
     </header>
+    <main class="bg-[#F5FFF6] py-12 px-15 grid grid-cols-[3fr_1fr]">
+      <!-- Emergency Hotline Section -->
+      <div class="grid grid-cols-3 gap-[1.875rem]">
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">
+              National Emergency Number
+            </h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              National Emergency
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              All
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
