Added Meaningful Information in Main Section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,55 @@
           <div class="flex justify-between items-center mb-4">
             <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
               <img
+                src="assets/ambulance.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">Ambulance Service</h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              Ambulance
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              1994-999999
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              Health
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
                 src="assets/emergency.png"
                 alt="Emergency Logo"
                 class="h-8 w-8"
@@ -240,21 +289,164 @@
             />
           </div>
           <div class="mb-6">
-            <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
-            </h2>
+            <h2 class="hind-madurai-bold text-2xl">Women & Child Helpline</h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
+              Women & Child Helpline
             </p>
           </div>
           <div class="mb-6">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
+              109
             </p>
             <span
               class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
             >
-              All
+              Help
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">Anti-Corruption Helpline</h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              Anti-Corruption
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              106
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              Govt.
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">Electricity Helpline</h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">
+              Electricity Outage
+            </p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              16216
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              Electricity
+            </span>
+          </div>
+          <div class="flex h-10 gap-2">
+            <button
+              id="copy"
+              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
+            </button>
+            <button
+              id="call"
+              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
+            >
+              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
+              <p class="inter-light text-base text-white">Call</p>
+            </button>
+          </div>
+        </div>
+        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
+          <div class="flex justify-between items-center mb-4">
+            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
+              <img
+                src="assets/emergency.png"
+                alt="Emergency Logo"
+                class="h-8 w-8"
+              />
+            </div>
+            <img
+              id="heart-button"
+              src="assets/heart-outline.png"
+              alt="Outlined Heart Icon"
+              class="w-5 h-5"
+            />
+          </div>
+          <div class="mb-6">
+            <h2 class="hind-madurai-bold text-2xl">Brac Helpline</h2>
+            <p class="roboto-regular text-[1.125rem] text-gray-500">Brac</p>
+          </div>
+          <div class="mb-6">
+            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
+              16445
+            </p>
+            <span
+              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
+            >
+              NGO
             </span>
           </div>
           <div class="flex h-10 gap-2">
@@ -292,224 +484,20 @@
           </div>
           <div class="mb-6">
             <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
+              Bangladesh Railway Helpline
             </h2>
             <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
+              Bangladesh Railway
             </p>
           </div>
           <div class="mb-6">
             <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
+              163
             </p>
             <span
               class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
             >
-              All
-            </span>
-          </div>
-          <div class="flex h-10 gap-2">
-            <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
-            </button>
-            <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="inter-light text-base text-white">Call</p>
-            </button>
-          </div>
-        </div>
-        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
-          <div class="flex justify-between items-center mb-4">
-            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
-              <img
-                src="assets/emergency.png"
-                alt="Emergency Logo"
-                class="h-8 w-8"
-              />
-            </div>
-            <img
-              id="heart-button"
-              src="assets/heart-outline.png"
-              alt="Outlined Heart Icon"
-              class="w-5 h-5"
-            />
-          </div>
-          <div class="mb-6">
-            <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
-            </h2>
-            <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
-            </p>
-          </div>
-          <div class="mb-6">
-            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
-            </p>
-            <span
-              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
-            >
-              All
-            </span>
-          </div>
-          <div class="flex h-10 gap-2">
-            <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
-            </button>
-            <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="inter-light text-base text-white">Call</p>
-            </button>
-          </div>
-        </div>
-        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
-          <div class="flex justify-between items-center mb-4">
-            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
-              <img
-                src="assets/emergency.png"
-                alt="Emergency Logo"
-                class="h-8 w-8"
-              />
-            </div>
-            <img
-              id="heart-button"
-              src="assets/heart-outline.png"
-              alt="Outlined Heart Icon"
-              class="w-5 h-5"
-            />
-          </div>
-          <div class="mb-6">
-            <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
-            </h2>
-            <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
-            </p>
-          </div>
-          <div class="mb-6">
-            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
-            </p>
-            <span
-              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
-            >
-              All
-            </span>
-          </div>
-          <div class="flex h-10 gap-2">
-            <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
-            </button>
-            <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="inter-light text-base text-white">Call</p>
-            </button>
-          </div>
-        </div>
-        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
-          <div class="flex justify-between items-center mb-4">
-            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
-              <img
-                src="assets/emergency.png"
-                alt="Emergency Logo"
-                class="h-8 w-8"
-              />
-            </div>
-            <img
-              id="heart-button"
-              src="assets/heart-outline.png"
-              alt="Outlined Heart Icon"
-              class="w-5 h-5"
-            />
-          </div>
-          <div class="mb-6">
-            <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
-            </h2>
-            <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
-            </p>
-          </div>
-          <div class="mb-6">
-            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
-            </p>
-            <span
-              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
-            >
-              All
-            </span>
-          </div>
-          <div class="flex h-10 gap-2">
-            <button
-              id="copy"
-              class="outline-1 outline-gray-200 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/copy.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="roboto-regular text-[1.125rem] text-gray-500">Copy</p>
-            </button>
-            <button
-              id="call"
-              class="bg-green-600 rounded-lg flex justify-center items-center gap-2 w-full"
-            >
-              <img src="assets/telephone.png" alt="Copy Icon" class="w-4 h-4" />
-              <p class="inter-light text-base text-white">Call</p>
-            </button>
-          </div>
-        </div>
-        <div class="p-8 rounded-[0.75rem] bg-white shadow-md">
-          <div class="flex justify-between items-center mb-4">
-            <div class="p-[0.875rem] rounded-[1rem] bg-[#FFE3E2]">
-              <img
-                src="assets/emergency.png"
-                alt="Emergency Logo"
-                class="h-8 w-8"
-              />
-            </div>
-            <img
-              id="heart-button"
-              src="assets/heart-outline.png"
-              alt="Outlined Heart Icon"
-              class="w-5 h-5"
-            />
-          </div>
-          <div class="mb-6">
-            <h2 class="hind-madurai-bold text-2xl">
-              National Emergency Number
-            </h2>
-            <p class="roboto-regular text-[1.125rem] text-gray-500">
-              National Emergency
-            </p>
-          </div>
-          <div class="mb-6">
-            <p class="roboto-bold text-[2.1rem] leading-[2.5rem] mb-[0.5rem]">
-              999
-            </p>
-            <span
-              class="bg-gray-100 px-4 py-[0.375rem] text-[1.125rem] text-gray-500 rounded-full"
-            >
-              All
+              Travel
             </span>
           </div>
           <div class="flex h-10 gap-2">
