Added Heart Icon Functionality

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="flex gap-5">
           <div
-            class="bg-[rgba(65,255,107,10%)] inter-black text-base px-[2.21875rem] py-[0.6875rem] flex items-center gap-[0.625rem] rounded-full"
+            class="bg-[rgba(65,255,107,10%)] inter-black text-base w-[7.6875rem] h-[3.25rem] flex items-center justify-center gap-[0.625rem] rounded-full"
           >
             <p id="heart">0</p>
             <img
@@ -42,15 +42,15 @@
             />
           </div>
           <div
-            class="bg-[rgba(65,255,107,10%)] inter-black text-base px-5 py-[0.875rem] flex items-center gap-[0.625rem] rounded-full"
+            class="bg-[rgba(65,255,107,10%)] inter-black text-base h-[3.25rem] w-[6.625rem] flex justify-center items-center gap-[0.625rem] rounded-full"
           >
             <p id="coin">100</p>
             <img src="assets/coin.png" alt="coin" class="w-6 h-6" />
           </div>
           <div
-            class="bg-[#00A63E] text-white inter-semi-bold text-base px-[2.21875rem] py-[0.6875rem] flex items-center gap-[0.625rem] rounded-full"
+            class="bg-[#00A63E] text-white inter-semi-bold text-base h-[3.25rem] w-[7.9375rem] flex justify-center items-center gap-[0.625rem] rounded-full"
           >
-            <p><span id="copy">2</span> Copy</p>
+            <p><span id="copy">0</span> Copy</p>
           </div>
         </div>
       </nav>
@@ -86,10 +86,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -137,10 +136,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -184,10 +182,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -233,10 +230,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -282,10 +278,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -331,10 +326,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -380,10 +374,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -429,10 +422,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -476,10 +468,9 @@
               />
             </div>
             <img
-              id="heart-button"
               src="assets/heart-outline.png"
               alt="Outlined Heart Icon"
-              class="w-5 h-5"
+              class="w-5 h-5 heart-button hover:cursor-pointer active:w-6 active:h-6 transition-all ease-in-out duration-50"
             />
           </div>
           <div class="mb-6">
@@ -548,5 +539,6 @@
         </div>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
